<resources>
    <string name="app_name">口岸放射性环境监测助手</string>
    <string name="activity2">元素</string>
    <string name="unit_ac">活度单位选择</string>
    <string name="unit_ds">距离单位选择</string>
    <string name="material">屏蔽材料选择</string>
    <string name="basis">依据：</string>
    <string name="basis1">
        《中华人民共和国放射性污染防治法》第二十八条:\n
        \  \  \  \  生产、销售、使用放射性同位素和射线装置的单位，应当按照国务院有关放射性同位素与射线装置放射防护的规定申请领取许可证，办理登记手续。\n
        \  \  \  \  转让、进口放射性同位素和射线装置的单位以及装备有放射性同位素的仪表的单位，应当按照国务院有关放射性同位素与射线装置放射防护的规定办理有关手续。\n\n
        《放射性同位素与射线装置安全和防护条例》第五条:\n
        \  \  \  \  生产、销售、使用放射性同位素和射线装置的单位，应当依照本章规定取得许可证。\n\n
        《放射性同位素与射线装置安全许可管理办法》第二条:\n
        \  \  \  \  在中华人民共和国境内生产、销售、使用放射性同位素与射线装置的单位（以下简称“辐射工作单位”），应当依照本办法的规定，取得辐射安全许可证（以下简称“许可证”）。\n
        \  \  \  \  进口、转让放射性同位素，进行放射性同位素野外示踪试验，应当依照本办法的规定报批。\n
        \  \  \  \  出口放射性同位素，应当依照本办法的规定办理有关手续。\n
        \  \  \  \  使用放射性同位素的单位将放射性同位素转移到外省、自治区、直辖市使用的，应当依照本办法的规定备案。\n
        \  \  \  \  本办法所称放射性同位素包括放射源和非密封放射性物质。</string>
    <string name="basis2">
        《中华人民共和国放射性污染防治法》第二十九条:\n
        \  \  \  \  核设施营运单位在进行核设施建造、装料、运行、退役等活动前，必须按照国务院有关核设施安全监督管理的规定，申请领取核设施建造、运行许可证和办理装料、退役等审批手续。\n
        \  \  \  \  核设施营运单位领取有关许可证或者批准文件后，方可进行相应的建造、装料、运行、退役等活动。\n\n
        《中华人民共和国环境影响评价法》第十六条:\n
        \  \  \  \  暂无\n\n
        《放射性同位素与射线装置安全许可管理办法》第七条:\n
        \  \  \  \  辐射工作单位在申请领取许可证前，应当组织编制或者填报环境影响评价文件，并依照国家规定程序报环境保护主管部门审批。\n
        \  \  \  \  环境影响评价文件中的环境影响报告书或者环境影响报告表，应当由具有相应环境影响评价资质的机构编制。
    </string>
    <string name="basis3">
        《中华人民共和国放射性污染防治法》第三十条:\n
        \  \  \  \ 新建、改建、扩建放射工作场所的放射防护设施，应当与主体工程同时设计、同时施工、同时投入使用。\n
        \  \  \  \ 放射防护设施应当与主体工程同时验收；验收合格的，主体工程方可投入生产或者使用。\n\n
        《建设项目竣工环境保护验收管理办法》第九条:\n
        \  \  \  \  暂无
    </string>
    <string name="basis4">
        《放射性同位素与射线装置安全和防护条例》第七条:\n
        \  \  \  \  生产、销售、使用放射性同位素和射线装置的单位申请领取许可证，应当具备下列条件：\n
        \  \  \  \  （一）有与所从事的生产、销售、使用活动规模相适应的，具备相应专业知识和防护知识及健康条件的专业技术人员；\n
        \  \  \  \  （二）有符合国家环境保护标准、职业卫生标准和安全防护要求的场所、设施和设备；\n
        \  \  \  \  （三）有专门的安全和防护管理机构或者专职、兼职安全和防护管理人员，并配备必要的防护用品和监测仪器；\n
        \  \  \  \  （四）有健全的安全和防护管理规章制度、辐射事故应急措施；\n
        \  \  \  \  （五）产生放射性废气、废液、固体废物的，具有确保放射性废气、废液、固体废物达标排放的处理能力或者可行的处理方案。
    </string>
    <string name="basis5">
        《放射性同位素与射线装置安全和防护条例》第二十八条:\n
        \  \  \  \  生产、销售、使用放射性同位素和射线装置的单位，应当对直接从事生产、销售、使用活动的工作人员进行安全和防护知识教育培训，并进行考核；考核不合格的，不得上岗。\n
        \  \  \  \  辐射安全关键岗位应当由注册核安全工程师担任。辐射安全关键岗位名录由国务院环境保护主管部门商国务院有关部门制定并公布。\n\n
        《放射性同位素与射线装置安全和防护管理办法》第二十二条:\n
        \  \  \  \  取得辐射安全培训合格证书的人员，应当每四年接受一次再培训。\n
        \  \  \  \  辐安全再培训包括新颁布的相关法律、法规和辐射安全与防护专业标准、技术规范，以及辐射事故案例分析与经验反馈等内容。\n
        \  \  \  \  不参加再培训的人员或者再培训考核不合格的人员，其辐射安全培训合格证书自动失效。
    </string>
    <string name="basis6">
        《放射性同位素与射线装置安全和防护条例》第二十九条:\n
        \  \  \  \  生产、销售、使用放射性同位素和射线装置的单位，应当严格按照国家关于个人剂量监测和健康管理的规定，对直接从事生产、销售、使用活动的工作人员进行个人剂量监测和职业健康检查，建立个人剂量档案和职业健康监护档案。
    </string>
    <string name="basis7">
        《放射性同位素与射线装置安全和防护条例》第三十条:\n
        \  \  \  \  生产、销售、使用放射性同位素和射线装置的单位，应当对本单位的放射性同位素、射线装置的安全和防护状况进行年度评估。发现安全隐患的，应当立即进行整改。\n\n
        《放射性同位素与射线装置安全许可管理办法》第四十二条:\n
        \  \  \  \  辐射工作单位应当编写放射性同位素与射线装置安全和防护状况年度评估报告，于每年1月31日前报原发证机关。\n
        \  \  \  \  年度评估报告应当包括放射性同位素与射线装置台账、辐射安全和防护设施的运行与维护、辐射安全和防护制度及措施的建立和落实、事故和应急以及档案管理等方面的内容。\n\n
        《放射性同位素与射线装置安全和防护管理办法》第九条:\n
        \  \  \  \  生产、销售、使用放射性同位素与射线装置的单位，应当按照国家环境监测规范，对相关场所进行辐射监测，并对监测数据的真实性、可靠性负责；不具备自行监测能力的，可以委托经省级人民政府环境保护主管部门认定的环境监测机构进行监测。\n\n
        《放射性同位素与射线装置安全和防护管理办法》第十二条:\n
        \  \  \  \  生产、销售、使用放射性同位素与射线装置的单位，应当对本单位的放射性同位素与射线装置的安全和防护状况进行年度评估，并于每年1月31日前向发证机关提交上一年度的评估报告。\n
        \  \  \  \  安全和防护状况年度评估报告应当包括下列内容：\n
        \  \  \  \  （一）辐射安全和防护设施的运行与维护情况；\n
        \  \  \  \  （二）辐射安全和防护制度及措施的制定与落实情况；\n
        \  \  \  \  （三）辐射工作人员变动及接受辐射安全和防护知识教育培训（以下简称“辐射安全培训”）情况；\n
        \  \  \  \  （四）放射性同位素进出口、转让或者送贮情况以及放射性同位素、射线装置台账；\n
        \  \  \  \  （五）场所辐射环境监测和个人剂量监测情况及监测数据；\n
        \  \  \  \  （六）辐射事故及应急响应情况；\n
        \  \  \  \  （七）核技术利用项目新建、改建、扩建和退役情况；\n
        \  \  \  \  （八）存在的安全隐患及其整改情况；\n
        \  \  \  \  （九）其他有关法律、法规规定的落实情况。\n
        \  \  \  \  年度评估发现安全隐患的，应当立即整改。
    </string>
    <string name="basis8">
        《放射性同位素与射线装置安全许可管理办法》第十六条:\n
        \  \  \  \  使用放射性同位素、射线装置的单位申请领取许可证，应当具备下列条件：\n
        \  \  \  \  （一）使用Ⅰ类、Ⅱ类、Ⅲ类放射源，使用Ⅰ类、Ⅱ类射线装置的，应当设有专门的辐射安全与环境保护管理机构，或者至少有1名具有本科以上学历的技术人员专职负责辐射安全与环境保护管理工作；其他辐射工作单位应当有1名具有大专以上学历的技术人员专职或者兼职负责辐射安全与环境保护管理工作；依据辐射安全关键岗位名录，应当设立辐射安全关键岗位的，该岗位应当由注册核安全工程师担任。\n
        \  \  \  \  （二）从事辐射工作的人员必须通过辐射安全和防护专业知识及相关法律法规的培训和考核。\n
        \  \  \  \  （三）使用放射性同位素的单位应当有满足辐射防护和实体保卫要求的放射源暂存库或设备。\n
        \  \  \  \  （四）放射性同位素与射线装置使用场所有防止误操作、防止工作人员和公众受到意外照射的安全措施。\n
        \  \  \  \  （五）配备与辐射类型和辐射水平相适应的防护用品和监测仪器，包括个人剂量测量报警、辐射监测等仪器。使用非密封放射性物质的单位还应当有表面污染监测仪。\n
        \  \  \  \  （六）有健全的操作规程、岗位职责、辐射防护和安全保卫制度、设备检修维护制度、放射性同位素使用登记制度、人员培训计划、监测方案等。\n
        \  \  \  \  （七）有完善的辐射事故应急措施。\n
        \  \  \  \  （八）产生放射性废气、废液、固体废物的，还应具有确保放射性废气、废液、固体废物达标排放的处理能力或者可行的处理方案。\n
        \  \  \  \  使用放射性同位素和射线装置开展诊断和治疗的单位，还应当配备质量控制检测设备，制定相应的质量保证大纲和质量控制检测计划，至少有一名医用物理人员负责质量保证与质量控制检测工作。
    </string>
    <string name="basis9">
        《放射性同位素与射线装置安全许可管理办法》第三十八条:\n
        \  \  \  \  生产、进口放射源的单位在销售Ⅰ类、Ⅱ类、Ⅲ类放射源时，应当与使用放射源的单位签订废旧放射源返回合同。\n
        \  \  \  \  使用Ⅰ类、Ⅱ类、Ⅲ类放射源的单位应当按照废旧放射源返回合同规定，在放射源闲置或者废弃后3个月内将废旧放射源交回生产单位或者返回原出口方。确实无法交回生产单位或者返回原出口方的，送交有相应资质的放射性废物集中贮存单位贮存。\n
        \  \  \  \  使用Ⅳ类、Ⅴ类放射源的单位应当按照国务院环境保护主管部门的规定，在放射源闲置或者废弃后3个月内将废旧放射源进行包装整备后送交有相应资质的放射性废物集中贮存单位贮存。\n
        \  \  \  \  使用放射源的单位应当在废旧放射源交回、返回或者送交活动完成之日起20日内，向其所在地省级环境保护主管部门备案。
    </string>
    <string name="basis10">
        《放射性同位素与射线装置安全和防护管理办法》第五条:\n
        \  \  \  \  生产、销售、使用、贮存放射性同位素与射线装置的场所，应当按照国家有关规定设置明显的放射性标志，其入口处应当按照国家有关安全和防护标准的要求，设置安全和防护设施以及必要的防护安全联锁、报警装置或者工作信号。\n
        \  \  \  \  射线装置的生产调试和使用场所，应当具有防止误操作、防止工作人员和公众受到意外照射的安全措施。\n
        \  \  \  \  放射性同位素的包装容器、含放射性同位素的设备和射线装置，应当设置明显的放射性标识和中文警示说明；放射源上能够设置放射性标识的，应当一并设置。运输放射性同位素和含放射源的射线装置的工具，应当按照国家有关规定设置明显的放射性标志或者显示危险信号。
    </string>

    <string name="raditionAccident1">
        凡符合下列情形之一的，为特别重大辐射事故：\n
        \  \  \  \  （1）Ⅰ、Ⅱ类放射源丢失、被盗、失控并造成大范围严重辐射污染后果；\n
        \  \  \  \  （2）放射性同位素和射线装置失控导致3人以上急性死亡；\n
        \  \  \  \  （3）放射性物质泄漏，造成大范围辐射污染后果；\n
        \  \  \  \  （4）对我市境内可能造成大范围辐射污染的航天器坠落或境外发生的辐射事故。
    </string>

    <string name="raditionAccident2">
        凡符合下列情形之一的，为重大辐射事故：\n
        \  \  \  \  （1）Ⅰ、Ⅱ类放射源丢失、被盗；\n
        \  \  \  \  （2）放射性同位素和射线装置失控导致3人以下急性死亡或者10人以上急性重度放射病、局部器官残疾；\n
        \  \  \  \  （3）放射性物质泄漏，造成较大范围辐射污染后果。
    </string>

    <string name="raditionAccident3">
        凡符合下列情形之一的，为较大辐射事故：\n
        \  \  \  \  （1）Ⅲ类放射源丢失、被盗；\n
        \  \  \  \  （2）放射性同位素和射线装置失控导致10人以下急性中毒放射病、局部器官残疾；\n
        \  \  \  \  （3）放射性物质泄漏，造成小范围辐射污染后果。
    </string>

    <string name="raditionAccident4">
        凡符合下列情形之一的，为一般辐射事故：\n
        \  \  \  \  （1）Ⅳ类、Ⅴ类放射源丢失、被盗；\n
        \  \  \  \  （2）放射性同位素和射线装置失控导致人员受到超过年剂量限制的照射；\n
        \  \  \  \  （3）放射性物质泄漏，造成厂区内或设施内局部辐射污染后果；\n
        \  \  \  \  （4）铀矿冶、伴生矿开发利用中超标排放，造成环境辐射污染后果。
    </string>

    <string name="reportString1">
        \  \  \  \  公安：\n
        \  \  \  \  环保：\n
        \  \  \  \  卫生：\n
    </string>

    <string name="reportString2">
        \  \  \  \  辐射事故责任单位或责任人发现辐射事故后，必须立即向所在地环境保护、公安、卫生计生部门报告，并启动本单位辐射事故应急预案，采取必要的先期应急处置措施。事发地辐射事故应急机构接到报告后，立即初步判断事故级别，报告本级政府和上一级辐射事故应急机构，并逐级上报。情况紧急时，也可越级上报，但应同时报上一级主管部门。
    </string>

    <string name="reportString3">
        \  \  \  \  发生辐射事故，事发地县、区辐射事故应急指挥部在1小时内报至所在地人民政府和市辐射事故应急指挥部。
    </string>

    <string name="reportString4">
        \  \  \  \  发生特别重大、重大或较大辐射事故的，市辐射事故应急指挥部应在1小时内报至省辐射事故应急指挥部和市人民政府，在2小时内报至省人民政府。
    </string>

    <string name="nuclearResponse1">
        \  \  \  \  核设施营运单位进入戒备状态，采取预防或缓解措施，使核设施保持或恢复到安全状态，并及时向国家核应急办、省核应急办、核电主管部门、核安全监管部门、所属集团公司（院）提出相关建议；对事故的性质及后果进行评价。\n
        \  \  \  \  省核应急组织密切关注事态发展，保持核应急通信渠道畅通；做好公众沟通工作，视情组织本省部分核应急专业力量进入待命状态。\n
        \  \  \  \  国家核应急办研究决定启动Ⅳ级响应，加强与相关省核应急组织和核设施营运单位及其所属集团公司（院）的联络沟通，密切关注事态发展，及时向国家核应急协调委成员单位通报情况。各成员单位做好相关应急准备。\n
        \  \  \  \  核设施营运单位组织评估，确认核设施已处于安全状态后，提出终止应急响应建议报国家和省核应急办，国家核应急办研究决定终止Ⅳ级响应。
    </string>

    <string name="nuclearResponse2">
        \  \  \  \  在Ⅳ级响应的基础上，加强以下应急措施：\n
        \  \  \  \  核设施营运单位采取控制事故措施，开展应急辐射监测和气象观测，采取保护工作人员的辐射防护措施；加强信息报告工作，及时提出相关建议；做好公众沟通工作。\n\  \  \  \  省核应急委组织相关成员单位、专家组会商，研究核应急工作措施；视情组织本省核应急专业力量开展辐射监测和气象观测。\n
        \  \  \  \  国家核应急协调委研究决定启动Ⅲ级响应，组织国家核应急协调委有关成员单位及专家委员会开展趋势研判、公众沟通等工作；协调、指导地方和核设施营运单位做好应急有关工作。\n
        \  \  \  \  核设施营运单位组织评估，确认核设施已处于安全状态后，提出终止应急响应建议报国家核应急协调委和省核应急委，国家核应急协调委研究决定终止Ⅲ级响应。
    </string>

    <string name="nuclearResponse3">
        \  \  \  \  在Ⅲ级响应的基础上，加强以下应急措施：\n
        \  \  \  \  核设施营运单位组织开展工程抢险；撤离非应急人员，控制应急人员辐射照射；进行污染区标识或场区警戒，对出入场区人员、车辆等进行污染监测；做好与外部救援力量的协同准备。\n
        \  \  \  \  省核应急委组织实施气象观测预报、辐射监测，组织专家分析研判趋势；及时发布通告，视情采取交通管制、控制出入通道、心理援助等措施；根据信息发布办法的有关规定，做好信息发布工作，协调调配本行政区域核应急资源给予核设施营运单位必要的支援，做好医疗救治准备等工作。\n
        \  \  \  \  国家核应急协调委研究决定启动Ⅱ级响应，组织国家核应急协调委相关成员单位、专家委员会会商，开展综合研判；按照有关规定组织权威信息发布，稳定社会秩序；根据有关省级人民政府、省核应急委或核设施营运单位的请求，为事故缓解和救援行动提供必要的支持；视情组织国家核应急力量指导开展辐射监测、气象观测预报、医疗救治等工作。\n
        \  \  \  \  核设施营运单位组织评估，确认核设施已处于安全状态后，提出终止应急响应建议报国家核应急协调委和省核应急委，国家核应急协调委研究决定终止Ⅱ级响应。
    </string>

    <string name="nuclearResponse4">
        \  \  \  \  核设施营运单位组织工程抢险，缓解、控制事故，开展事故工况诊断、应急辐射监测；采取保护场内工作人员的防护措施，撤离非应急人员，控制应急人员辐射照射，对受伤或受照人员进行医疗救治；标识污染区，实施场区警戒，对出入场区人员、车辆等进行放射性污染监测；及时提出公众防护行动建议；对事故的性质及后果进行评价；协同外部救援力量做好抢险救援等工作；配合国家核应急协调委和省核应急委做好公众沟通和信息发布等工作。\n
        \  \  \  \  省核应急委组织实施场外应急辐射监测、气象观测预报，组织专家进行趋势分析研判，协调、调配本行政区域内核应急资源，向核设施营运单位提供必要的交通、电力、水源、通信等保障条件支援；及时发布通告，视情采取交通管制、发放稳定碘、控制出入通道、控制食品和饮水、医疗救治、心理援助、去污洗消等措施，适时组织实施受影响区域公众的隐蔽、撤离、临时避迁、永久再定居；根据信息发布办法的有关规定，做好信息发布工作，组织开展公众沟通等工作；及时向事故后果影响或可能影响的邻近省（自治区、直辖市）通报事故情况，提出相应建议。\n
        \  \  \  \  国家核应急协调委向国务院提出启动Ⅰ级响应建议，国务院决定启动Ⅰ级响应。\n
        \  \  \  \  国家核应急协调委组织协调核应急处置工作。必要时，国务院成立国家核事故应急指挥部，统一领导、组织、协调全国核应急处置工作。\n
        \  \  \  \  国家核事故应急指挥部根据工作需要设立事故抢险、辐射监测、医学救援、放射性污染物处置、群众生活保障、信息发布和宣传报道、涉外事务、社会稳定、综合协调等工作组。\n
        \  \  \  \  国家核事故应急指挥部或国家核应急协调委对以下任务进行部署，并组织协调有关地区和部门实施：\n
        \  \  \  \  ①组织国家核应急协调委相关成员单位、专家委员会会商，开展事故工况诊断、释放源项分析、辐射后果预测评价等，科学研判趋势，决定核应急对策措施。\n
        \  \  \  \  ②派遣国家核应急专业救援队伍，调配专业核应急装备参与事故抢险工作，抑制或缓解事故、防止或控制放射性污染等。\n
        \  \  \  \  ③组织协调国家和地方辐射监测力量对已经或可能受核辐射影响区域的环境（包括空中、陆地、水体、大气、农作物、食品和饮水等）进行放射性监测。\n
        \  \  \  \  ④组织协调国家和地方医疗卫生力量和资源，指导和支援受影响地区开展辐射损伤人员医疗救治、心理援助，以及去污洗消、污染物处置等工作。\n
        \  \  \  \  ⑤统一组织核应急信息发布。\n
        \  \  \  \  ⑥跟踪重要生活必需品的市场供求信息，开展市场监管和调控。\n
        \  \  \  \  ⑦组织实施农产品出口管制，对出境人员、交通工具、集装箱、货物、行李物品、邮包快件等进行放射性沾污检测与控制。\n
        \  \  \  \  ⑧按照有关规定和国际公约的要求，做好向国际原子能机构、有关国家和地区的国际通报工作；根据需要提出国际援助请求\n
        \  \  \  \  ⑨其他重要事项。\n
        \  \  \  \  当核事故已得到有效控制，放射性物质的释放已经停止或者已经控制到可接受的水平，核设施基本恢复到安全状态，由国家核应急协调委提出终止Ⅰ级响应建议，报国务院批准。\n
        \  \  \  \  视情成立的国家核事故应急指挥部在应急响应终止后自动撤销。
    </string>
    <string name="text1">亮点率：\n帧数：\n用时：\n剂量率：</string>

    <string-array name="item_arr">
        <item>元素周期表</item>
        <item>放射性核素查询</item>
        <item>辐射常用单位</item>
        <item>辐射水平查询</item>
        <item>衰变计算</item>
        <item>屏蔽与剂量率计算</item>
        <item>法律法规查询</item>
        <item>执法助手</item>
        <item>辐射检测分析标准</item>
        <item>化学试剂</item>
        <item>辐射事故应急</item>
        <item>核事故应急</item>
        <item>口岸放射性应急平台</item>

    </string-array>


</resources>


