<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="申领辐射安全许可证"
                android:textSize="20sp"
                />
            <ImageButton
                android:id="@+id/arrowDownButtonHelper1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_down"
                android:onClick="onClick"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutHelper1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <TextView
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basis"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <TextView
                android:lineSpacingExtra="3dp"
                android:paddingLeft="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basis1"
                android:textColor="#114074"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="履行环评手续"
                android:textSize="20sp" />
            <ImageButton
                android:id="@+id/arrowDownButtonHelper2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_down"
                android:onClick="onClick"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutHelper2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <TextView
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basis"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <TextView
                android:lineSpacingExtra="3dp"
                android:paddingLeft="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basis2"
                android:textColor="#114074"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="履行验收手续"
                android:textSize="20sp" />
            <ImageButton
                android:id="@+id/arrowDownButtonHelper3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_down"
                android:onClick="onClick"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutHelper3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <TextView
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basis"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <TextView
                android:lineSpacingExtra="3dp"
                android:paddingLeft="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basis3"
                android:textColor="#114074"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="辐射安全和防护管理制度与事故应急"
                android:textSize="20sp" />
            <ImageButton
                android:id="@+id/arrowDownButtonHelper4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_down"
                android:onClick="onClick"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutHelper4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <TextView
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basis"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <TextView
                android:lineSpacingExtra="3dp"
                android:paddingLeft="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basis4"
                android:textColor="#114074"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="辐射工作人员的辐射安全上岗证"
                android:textSize="20sp" />
            <ImageButton
                android:id="@+id/arrowDownButtonHelper5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_down"
                android:onClick="onClick"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutHelper5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <TextView
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basis"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <TextView
                android:lineSpacingExtra="3dp"
                android:paddingLeft="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basis5"
                android:textColor="#114074"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="进行个人剂量检测和职业健康检查"
                android:textSize="20sp" />
            <ImageButton
                android:id="@+id/arrowDownButtonHelper6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_down"
                android:onClick="onClick"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutHelper6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <TextView
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basis"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <TextView
                android:lineSpacingExtra="3dp"
                android:paddingLeft="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basis6"
                android:textColor="#114074"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="年度评估报告"
                android:textSize="20sp" />
            <ImageButton
                android:id="@+id/arrowDownButtonHelper7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_down"
                android:onClick="onClick"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutHelper7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <TextView
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basis"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <TextView
                android:lineSpacingExtra="3dp"
                android:paddingLeft="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basis7"
                android:textColor="#114074"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="相应辐射监测仪器"
                android:textSize="20sp" />
            <ImageButton
                android:id="@+id/arrowDownButtonHelper8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_down"
                android:onClick="onClick"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutHelper8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <TextView
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basis"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <TextView
                android:lineSpacingExtra="3dp"
                android:paddingLeft="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basis8"
                android:textColor="#114074"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="闲置或废弃放射源情况"
                android:textSize="20sp" />
            <ImageButton
                android:id="@+id/arrowDownButtonHelper9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_down"
                android:onClick="onClick"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutHelper9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <TextView
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basis"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <TextView
                android:lineSpacingExtra="3dp"
                android:paddingLeft="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basis9"
                android:textColor="#114074"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="十、设置明显的放射性标志，设置必要的防护安全联锁、报警装置或者工作信号"
                android:textSize="20sp" />
            <ImageButton
                android:paddingTop="50dp"
                android:id="@+id/arrowDownButtonHelper10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_down"
                android:onClick="onClick"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutHelper10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <TextView
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basis"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <TextView
                android:lineSpacingExtra="3dp"
                android:paddingLeft="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basis10"
                android:textColor="#114074"
                android:textSize="16sp"
                />
        </LinearLayout>



    </LinearLayout>

</ScrollView>